Changes from today.

--- a/index.jade
+++ b/index.jade
@@ -15,7 +15,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
 
         link(rel="stylesheet", href="css/reveal.min.css")
-        link(rel="stylesheet", href="css/theme/default.css", id="theme")
+        link(rel="stylesheet", href="css/theme/sky.css", id="theme")
 
         //- For syntax highlighting
         link(rel="stylesheet", href="lib/css/zenburn.css")
@@ -51,21 +51,23 @@ html(lang="en")
                 section.builds
                     include slides/builds-intro
                     include slides/builds-module
-                    include slides/builds-sass
                     include slides/builds-push
 
                 include slides/builds-outro
-                include slides/solutions
+                include slides/xkcd
+                
+                section.solutions
+                    include slides/solutions
+                    include slides/scripts
+
                 include slides/dangerous
                 
                 section.grunt
                     include slides/what-is-grunt
-                    include slides/example-tasks
                     include slides/how-do-i-install-grunt
                     include slides/how-do-i-use-grunt
                     include slides/how-do-i-use-grunt-2
 
-                include slides/xkcd
 
                 include slides/demo
 
