--- a/slides/builds-outro.jade
+++ b/slides/builds-outro.jade
@@ -1,7 +1,9 @@
 section
     h2 What's the problem
-    p There is overhead per project for accomplishing similar tasks
-        ul
-            li Building
-            li Pushing new versions to production
-            li Development tasks
+    p We waste time doing repetitive tasks that a computer could do faster and better. Also context-switching when projects are different.
+    br
+    ul
+        li Building
+        li Pushing new versions to production
+        li Development tasks
+        li Project specific tasks
