--- a/slides/how-do-i-use-grunt.jade
+++ b/slides/how-do-i-use-grunt.jade
@@ -13,5 +13,6 @@ section
                 console.log('Hello, world!')
             })
         }
-
+        
     pre: code.bash(data-trim) $ grunt my-first-task
+    pre: code.bash(data-trim) Hello, world!
