--- a/slides/what-is-grunt.jade
+++ b/slides/what-is-grunt.jade
@@ -4,9 +4,8 @@ section
     p Self-described 
         em task runner
         | .
-    p Command line tool
     p You define tasks that you want to automate.
-    p Use the command line tool to perform those tasks.
+    p Use the command line tool to run those tasks.
 
     pre: code.bash(data-trim).
         grunt watch
@@ -14,3 +13,4 @@ section
         grunt browserify:dev
         grunt dev
         grunt test
+        grunt publish
