--- a/slides/census-one-year.jade
+++ b/slides/census-one-year.jade
@@ -1,3 +1,3 @@
 section
     h2 One year ago
-    p I presented a talk about our Census Explorer
+    p I presented a talk about the Census Explorer we made for SBS
